fixed centering on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -27,10 +27,9 @@
 
 @media (max-width:600px) {
   .card{
-    min-width: 15rem;
-    position:relative;
-    left: 6rem;
-    top: 12rem;
+    display: inline-flex;
+    justify-content: center;
+    min-width: 50vw;
   }
 }
 
